--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "Calendar",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "description" : "A complete datepicker solution. Time and range included",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/panda01/calendar.git"
+  },
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.6.3",
@@ -8,5 +13,7 @@
     "grunt-contrib-uglify": "~0.2.2"
   },
   "dependencies": {
+    "moment": "~2.8.3",
+    "jquery": ">=1.7"
   }
 }
