--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,24 @@
     "jquery": ">=1.7",
     "lodash": ">=2.4.1",
     "bootstrap": "3.2.0"
-  }
+  },
+  "homepage": "https://github.com/panda01/calendar",
+  "authors": [
+    "Khalah Jones Golden <khasan222@gmail.com>"
+  ],
+  "main": "js/calendar.js",
+  "keywords": [
+    "date-picker",
+    "calendar",
+    "time-picker"
+  ],
+  "license": "MIT",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
