--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "grunt": ">=0.4.2",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-jshint": ">=0.6.3",
+    "grunt-contrib-less": ">=0.11.4",
+    "grunt-contrib-uglify": ">=0.2.2",
+    "grunt-contrib-watch": ">=0.6.1"
   }
 }
