--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "grunt": ">=0.4.2",
+    "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-jshint": ">=0.6.3",
     "grunt-contrib-less": ">=0.11.4",
     "grunt-contrib-uglify": ">=0.2.2",
